[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "pycrypto"
version = "0.1.0"
[tool.poetry.dependencies]
eel = "^0.12.4"
pycryptodome = "^3.9"
python = "^3.8"
[tool.poetry.dev-dependencies]
